--- a/bower.json
+++ b/bower.json
@@ -1,46 +1,45 @@
 {
   "name": "response-view",
   "description": "An element to display the HTTP response view",
-  "version": "1.0.0",
-  "license": "Apache-2.0 OR CC-BY-4.0",
+  "version": "2.0.0-preview",
+  "license": "Apache-2.0",
   "authors": [
+    "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "keywords": [
     "web-components",
-    "polymer"
+    "polymer",
+    "response",
+    "view"
   ],
   "private": true,
-  "main": [
-    "response-view.html"
-  ],
+  "main": "response-view.html",
   "repository": {
     "type": "git",
     "url": "git@github.com:advanced-rest-client/response-view.git"
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0",
-    "response-error-view": "advanced-rest-client/response-error-view#^0.1.1",
-    "response-body-view": "advanced-rest-client/response-body-view#^0.1.0",
-    "response-status-view": "advanced-rest-client/response-status-view#^0.1.1",
-    "fetch-polyfill": "advanced-rest-client/fetch-polyfill#^0.1.1",
-    "paper-input": "PolymerElements/paper-input#^1.1.22",
-    "paper-button": "PolymerElements/paper-button#^1.0.14",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "response-error-view": "advanced-rest-client/response-error-view#2.0.0-preview",
+    "response-body-view": "advanced-rest-client/response-body-view#2.0.0-preview",
+    "response-status-view": "advanced-rest-client/response-status-view#2.0.0-preview",
+    "xhr-simple-request": "advanced-rest-client/xhr-simple-request#2.0.0-preview"
   },
   "devDependencies": {
-    "iron-component-page": "polymerelements/iron-component-page#1.0.0",
-    "web-component-tester": "^4.0.0",
-    "paper-styles": "polymerelements/paper-styles#^1.0.2",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.0.0",
-    "test-fixture": "PolymerElements/test-fixture#^1.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#^3.0.1",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "fetch-polyfill": "advanced-rest-client/fetch-polyfill#^0.1.1"
   },
   "ignore": [
     "**/.*",
-    "dependencyci.yml",
     "node_modules",
     "bower_components",
     "test",
