--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
-    "fetch-polyfill": "advanced-rest-client/fetch-polyfill#^0.1.1"
+    "fetch-polyfill": "advanced-rest-client/fetch-polyfill#^0.1.1",
+    "arc-polyfills": "advanced-rest-client/arc-polyfills#^0.1.11"
   },
   "ignore": [
     "**/.*",
