--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "response-view",
   "description": "An element to display the HTTP response view",
-  "version": "2.0.0-preview",
+  "version": "2.0.0",
   "license": "Apache-2.0",
   "authors": [
     "Pawel Psztyc",
@@ -21,10 +21,9 @@
   },
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
-    "response-error-view": "advanced-rest-client/response-error-view#2.0.0-preview",
-    "response-body-view": "advanced-rest-client/response-body-view#2.0.0-preview",
-    "response-status-view": "advanced-rest-client/response-status-view#2.0.0-preview",
-    "xhr-simple-request": "advanced-rest-client/xhr-simple-request#2.0.0-preview"
+    "response-error-view": "advanced-rest-client/response-error-view#^2.0.0",
+    "response-body-view": "advanced-rest-client/response-body-view#^2.0.0",
+    "response-status-view": "advanced-rest-client/response-status-view#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
@@ -36,6 +35,7 @@
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "xhr-simple-request": "advanced-rest-client/xhr-simple-request#^2.0.0",
     "fetch-polyfill": "advanced-rest-client/fetch-polyfill#^0.1.1",
     "arc-polyfills": "advanced-rest-client/arc-polyfills#^0.1.11"
   },
