--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@api-components/response-view",
+  "name": "@advanced-rest-client/response-view",
   "description": "An element to display the HTTP response view",
-  "version": "2.0.0-preview",
+  "version": "2.0.0",
   "license": "Apache-2.0",
   "authors": [
     "Pawel Psztyc",
