--- a/package.json
+++ b/package.json
@@ -1,29 +1,58 @@
 {
-  "name": "@api-components/response-view",
   "description": "An element to display the HTTP response view",
-  "version": "2.0.2",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "response",
+    "view"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/advanced-rest-client/response-view.git"
+  },
+  "name": "@advanced-rest-client/response-view",
+  "version": "3.0.0-preview.1",
   "license": "Apache-2.0",
   "authors": [
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.5.1"
+    "@advanced-rest-client/xhr-simple-request": "^3.0.0-preview.1",
+    "@polymer/gen-typescript-declarations": "^1.6.1",
+    "@polymer/iron-component-page": "^4.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0",
+    "@polymer/iron-test-helpers": "^3.0.0",
+    "@polymer/paper-button": "^3.0.0",
+    "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/paper-input": "^3.0.0",
+    "@polymer/paper-toast": "^3.0.0",
+    "@polymer/test-fixture": "^4.0.2",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3",
+    "wct-mocha": "^1.0.0"
   },
-  "private": false,
-  "main": "response-view.html",
+  "main": "response-view.js",
   "scripts": {
     "lint": "polymer lint response-view.html",
     "test-sauce": "polymer test --plugin sauce --job-name \"response-view:local-test\"",
     "test": "polymer test --plugin local",
     "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/advanced-rest-client/response-view.git"
-  },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/response-view/issues",
     "email": "arc@mulesoft.com"
+  },
+  "contributors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "dependencies": {
+    "@advanced-rest-client/response-body-view": "^3.0.0-preview.1",
+    "@advanced-rest-client/response-error-view": "^3.0.0-preview.1",
+    "@advanced-rest-client/response-status-view": "^3.0.0-preview.1",
+    "@polymer/polymer": "^3.0.0"
   }
 }
