--- a/package.json
+++ b/package.json
@@ -1,58 +1,79 @@
 {
+  "name": "@advanced-rest-client/response-view",
   "description": "An element to display the HTTP response view",
+  "version": "3.0.0",
+  "license": "Apache-2.0",
+  "main": "response-view.js",
   "keywords": [
     "web-components",
-    "polymer",
     "response",
     "view"
+  ],
+  "authors": [
+    "Pawel Psztyc"
+  ],
+  "contributors": [
+    "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/response-view.git"
   },
-  "name": "@advanced-rest-client/response-view",
-  "version": "3.0.0-preview.3",
-  "license": "Apache-2.0",
-  "authors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
-  ],
-  "devDependencies": {
-    "@advanced-rest-client/xhr-simple-request": "^3.0.0-preview.2",
-    "@polymer/gen-typescript-declarations": "^1.6.1",
-    "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.1.0",
-    "@polymer/iron-test-helpers": "^3.0.0",
-    "@polymer/paper-button": "^3.0.0",
-    "@polymer/paper-icon-button": "^3.0.0",
-    "@polymer/paper-input": "^3.0.2",
-    "@polymer/paper-toast": "^3.0.0",
-    "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "sinon": "^7.3.2",
-    "wct-mocha": "^1.0.0"
-  },
-  "main": "response-view.js",
-  "scripts": {
-    "lint": "polymer lint response-view.html",
-    "test-sauce": "polymer test --plugin sauce --job-name \"response-view:local-test\"",
-    "test": "polymer test --plugin local",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
-  },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/response-view/issues",
     "email": "arc@mulesoft.com"
   },
-  "contributors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
-  ],
   "dependencies": {
-    "@advanced-rest-client/response-body-view": "^3.0.0-preview.7",
-    "@advanced-rest-client/response-error-view": "^3.0.0-preview.2",
-    "@advanced-rest-client/response-status-view": "^3.0.0-preview.2",
-    "@polymer/polymer": "^3.2.0"
+    "@advanced-rest-client/response-body-view": "^3.0.0",
+    "@advanced-rest-client/response-error-view": "^3.0.0",
+    "@advanced-rest-client/response-status-view": "^3.0.0",
+    "lit-element": "^2.0.1"
+  },
+  "devDependencies": {
+    "@advanced-rest-client/arc-demo-helper": "^1.0.14",
+    "@advanced-rest-client/eslint-config": "^1.1.1",
+    "@advanced-rest-client/prettier-config": "^0.1.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.3",
+    "@advanced-rest-client/xhr-simple-request": "^3.0.0",
+    "@anypoint-web-components/anypoint-button": "^1.0.4",
+    "@anypoint-web-components/anypoint-input": "^0.1.7",
+    "@anypoint-web-components/anypoint-styles": "^1.0.0-preview.1",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/testing": "^2.2.8",
+    "@open-wc/testing-karma": "^3.1.24",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@polymer/iron-test-helpers": "^3.0.1",
+    "@polymer/paper-toast": "^3.0.0",
+    "deepmerge": "^4.0.0",
+    "es-dev-server": "^1.14.2",
+    "husky": "^1.0.0",
+    "karma": "^4.2.0",
+    "lint-staged": "^9.2.1",
+    "sinon": "^7.4.1",
+    "web-animations-js": "^2.3.2"
+  },
+  "scripts": {
+    "test": "karma start --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "lint:eslint": "eslint --ext .js,.html .",
+    "format:eslint": "eslint --ext .js,.html . --fix",
+    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
+    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
+    "generate-model": "node demo/model.js"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
